Update CAN reading and property sets
Updated main program for E46CanBusFrame creation and data output to
proper UI properties.

--- a/qml.qrc
+++ b/qml.qrc
@@ -17,5 +17,6 @@
         <file>mainAnalog.qml</file>
         <file>main.qml</file>
         <file>../images/tachometer_mask.png</file>
+        <file>mainDemo.qml</file>
     </qresource>
 </RCC>
